@@ -9,6 +9,9 @@ libx11 (2:1.2.1-1) UNRELEASED; urgency=low
   * Patch 012_ru_RU_UTF-8_XLC_LOCALE.diff removed, applied upstream.
   * Update patches 003_recognize_glibc_2.3.2_locale_names.diff,
     006_tailor_pt_BR.UTF-8_Compose.diff and 015_russian_locale_alias.diff.
+  * 003_recognize_glibc_2.3.2_locale_names.diff: don't comment out the
+    microsoft-cp* entries from compose.dir (closes: #511354).  Thanks, Sergei
+    Golovan!
 
  -- Julien Cristau <jcristau@debian.org>  Wed, 08 Apr 2009 02:37:36 +0200
 
